# mas-infrastructure

./: .gitignore  README.md  ac.py  as.py  go.work  go.work.sum  pyproject.toml  start_services.sh  start_soil_services.sh  test.py  test.sln  workspace.code-workspace
capnproto_schemas/: CMakeLists.txt  a.capnp  capnp_compile_all.bat  capnp_compile_all.sh  capnp_compile_all_c++.sh  capnp_compile_all_capnp.sh  capnp_compile_all_capnp_offsets.sh  capnp_compile_all_cpp.bat  capnp_compile_all_cpp.sh  capnp_compile_all_csharp.bat  capnp_compile_all_csharp.sh  capnp_compile_all_go.bat  capnp_compile_all_go.sh  capnp_compile_cpp_all.bat  capnp_compile_cpp_all.sh  capnp_compile_csharp_all.bat  capnp_compile_csharp_all.sh  capnp_compile_go_all.sh  capnp_go_update.bat  capnproto_schemas_csharp.csproj  climate.capnp  climate_data.capnp  climate_data.capnp.go  climate_data_old.capnp  cluster_admin_service.capnp  cluster_admin_service.capnp.go  common.capnp  common.capnp.go  config.capnp  crop.capnp  crop.capnp.go  data_services.capnp  date.capnp  fbp.capnp  fbp.capnp.go  frontend.capnp  geo.capnp  geo_coord.capnp  go.mod  grid.capnp  (+22 more)
capnproto_schemas/capnp/: persistent.capnp  persistent.capnp.go
capnproto_schemas/model/monica/: monica_management.capnp  monica_params.capnp  monica_state.capnp  soil_params.capnp
capnproto_schemas/model/weberest/: web-berest-data-import.capnp
capnproto_schemas/model/yieldstat/: yieldstat.capnp
capnproto_schemas/models/: yieldstat.capnp  yieldstat.capnp.go
capnproto_schemas/models/monica/: monica_params.capnp  monica_params.capnp.cs  monica_params.capnp.go  monica_state.capnp  monica_state.capnp.cs  monica_state.capnp.go  soil_params.capnp
capnproto_schemas/models/weberest/: web-berest-data-import.capnp
capnproto_schemas/models/yieldstat/: yieldstat.capnp  yieldstat.capnp.go
capnproto_schemas/monica/: monica.capnp  monica_params.capnp  monica_state.capnp
capnproto_schemas/zalfmas_capnp_schemas/: date.capnp  fbp.capnp  geo.capnp  grid.capnp  soil.capnp  x.capnp
capnproto_schemas/zalfmas_capnp_schemas/capnp/: persistent.capnp
capnproto_schemas/zalfmas_capnp_schemas/model/monica/: monica_management.capnp  monica_params.capnp  monica_state.capnp
common/python/: geo.py  (+3 more)
data_services/climate/rust/: Cargo.toml  build.rs  cluster_monica_instance_factory.rs  main.rs  server.rs  test_client_and_server.bash
src/cpp/climate/climate-common/: CMakeLists.txt
src/cpp/climate/climate-file-io/: CMakeLists.txt
src/cpp/common/: .gitignore  CMakeLists.txt  channel-main.cpp  channel.cpp  channel.h  channel_main.cpp  common.code-workspace  common.cpp  common.h  create_cmake_debug.sh  gateway-main.cpp  gateway.cpp  gateway.h  host-port-resolver-main.cpp  host-port-resolver.cpp  host-port-resolver.h  init_cmake_linux.sh  init_cmake_linux_debug.sh  init_cmake_linux_release.sh  persistence.cpp  persistence.h  restorable-service-main.cpp  restorable-service-main.h  restorer.cpp  restorer.h  rpc-connection-manager.cpp  rpc-connection-manager.h  rpc-connections.cpp  rpc-connections.h  sole.hpp  storage-service-main.cpp  storage-service.cpp  storage-service.h  storage-service.sqlite  storage_service.cpp  storage_service.h  storage_service_main.cpp  storage_service_template.sqlite  test_reader.py  test_reader_main.cpp  (+3 more)
src/cpp/db/: CMakeLists.txt  abstract-db-connections.cpp  abstract-db-connections.h  db.cpp  db.h
src/cpp/db/db/: CMakeLists.txt  create_cmake_release.sh
src/cpp/fbp/: CMakeLists.txt  fbp.code-workspace  timeseries-to-data.cpp
src/cpp/global_soil_dataset_service/: CMakeLists.txt  create_solution_x64_VS17_2022.cmd  service.cpp  service.h  service_main.cpp
src/cpp/soil/: CMakeLists.txt  constants.h  conversion.cpp  conversion.h  soil-from-db.cpp  soil-from-db.h  soil.cpp  soil.h
src/cpp/tests/: CMakeLists.txt  start_py_writers.sh  start_test.sh  start_writers.sh  test_a_main.cpp  test_reader_srv_main.cpp  test_reader_writer_main.cpp  test_services_main.cpp  test_storage_main.cpp
src/cpp/tools/: CMakeLists.txt  agricultural-helper.h  algorithms.cpp  algorithms.h  coord-trans.cpp  coord-trans.h  datastructures.h  date.cpp  date.h  debug.h  helper.cpp  helper.h  read-ini.cpp  read-ini.h  time-measurement.cpp
src/cpp/zeromq/: CMakeLists.txt  zmq-helper.cpp  zmq-helper.h
src/cpp/zig_test/: CMakeLists.txt  build.zig  build_.zig  build_full.zig  create_solution_x64_VS17_2022.cmd  test_a_main.cpp  test_reader_main.cpp  test_services_main.cpp  test_some_main.cpp  test_storage_main.cpp  test_writer.py  test_writer_main.cpp  test_writer_srv_main.cpp  tests.code-workspace
src/python/: a.capnp  a.py  ac.py  as.py  client_test.py  pyproject.toml  python.code-workspace  run.py  run_server.py  server_test.py  test.py  test_new_pycapnp.sh
src/python/common/: capnp_async_helpers.py  channel.py  common.py  csv.py  geo.py  rect_ascii_grid_management.py  service.py
src/python/fbp/: aggregate_monthly_flow.py  aggregate_monthly_traditional.py  aggregate_timeseries_data_monthly.py  climate_data_to_csv.py  console.py  fbp.py  get_climate_locations.py  lift_attributes.py  proj_transformer.py  pyproject.toml  read_csv.py  read_file.py  run_blazor_draw_fbp_flow.py  split_string.py  test_1.py  test_2.py  test_3_dwd_service.py  timeseries_to_data.py  to_geo_coord.py  write_file.py  write_monica_csv.py
src/python/pkgs/: pyproject.toml  setup.py
src/python/runtime/: cluster_master.py  cluster_monica_instance_factory.py  cluster_runtime.py
src/python/scratch_code/: a.capnp  client_test.py  crop.json  mini_flow_test.py  monica_daily_fbp_test.py  monica_fbp_test.py  monica_grassmind_daily_coupling.py  monica_zmq_test.py  pyproject.toml  run.py  run_server.py  server_test.py  sim.json  site.json  t_read.py  t_write.py
src/python/scripts/: download_ERA5-Land_via_Copernicus_CDS_API.py
src/python/services/: registry_service.py
src/python/tests/: conftest.py
src/python/zalfmas-capnpschemas/: pyproject.toml  pyproject.toml_
src/python/zalfmas-common/: pyproject.toml
src/python/zalfmas-fbp/: pyproject.toml
src/python/zalfmas-services/: pyproject.toml
(+796 files in other folders)
