[tool.poetry]
name = "zalfmas-capnpschemas"
version = "0.1.0"
description = ""
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
readme = "README.md"
exclude = [
    "zalfmas_capnpschemas/*.sh",
    "zalfmas_capnpschemas/*.bat",
    "zalfmas_capnpschemas/gen",
    "_cmake_debug",
    "zalfmas_capnpschemas/CMakeLists.txt"
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
