[package]

name = "climate_data"
version = "0.0.0"
authors = [ "Michael Berg-Mohnicke <michael.berg-mohnicke@zalf.de>"  ]
build = "build.rs"

[[bin]]

name = "climate_data"
path = "main.rs"

[build-dependencies]
capnpc = "0.10.1"

[dependencies]
capnp = "0.10.1"
capnp-rpc ="0.10.0"
futures = "0.1"
tokio = "0.1"
chrono = "0.4"

